Use latest for fzf and kubectl

--- a/home/vscode/.config/mise/config.toml
+++ b/home/vscode/.config/mise/config.toml
@@ -7,11 +7,11 @@ golang = 'latest'
 golangci-lint = 'latest'
 goreleaser = 'latest'
 bat = 'latest'
-fzf = "0.55.0"
+fzf = "latest"
 gitui = "latest"
 helm = "latest"
 k9s = "latest"
-kubectl = "1.30"
+kubectl = "latest"
 kubectx = "latest"
 lsd = "latest"
 starship = "latest"
