Allow manual triggering

--- a/.github/workflows/patch-upgrades-release.yml
+++ b/.github/workflows/patch-upgrades-release.yml
@@ -3,6 +3,7 @@ name: Periodic Build and Release
 on:
   schedule:
     - cron: '0 0 * * 0' # Runs weekly
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   build-and-release:
