Remove buildx from trivy, see if that fixes it

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -30,8 +30,8 @@ jobs:
     name: Build
     runs-on: "ubuntu-20.04"
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v3
 
       - name: Log into registry
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
