--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -30,9 +30,6 @@ jobs:
     name: Build
     runs-on: "ubuntu-20.04"
     steps:
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v3
-
       - name: Log into registry
         uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567 # v3.3.0
         with:
@@ -45,8 +42,8 @@ jobs:
         with:
           egress-policy: audit
 
-      # - name: Checkout code
-      #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - name: Checkout code
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: Build and push Docker image
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
