--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
+          build-args: GITHUB_API_TOKEN=${{ secrets.GITHUB_TOKEN }}
           push: false
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
 
