--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - '*'
+  workflow_run:
+    workflows: ["Periodic Build and Release"]
+    types:
+      - completed
 
 env:
   REGISTRY: ghcr.io
