--- a/.github/workflows/periodic-release.yml
+++ b/.github/workflows/periodic-release.yml
@@ -8,8 +8,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  TAG: "v1.0.1-beta.1"
-
+  TAG: ""
 permissions: read-all
 
 jobs:
@@ -24,6 +23,10 @@ jobs:
         with:
           fetch-depth: 0
           fetch-tags: true
+
+      - name: Get the latest tag version
+        id: get_version
+        run: echo "TAG=$(git describe --tags $(git rev-list --tags --max-count=1))" >> $GITHUB_ENV
 
       - name: 'Create Release'
         id: create_release
@@ -50,5 +53,5 @@ jobs:
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
           build-args: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          push: true
+          push: false
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
