Updates to prepare for production version Turn on push to ghcr Make release prod

--- a/.github/workflows/periodic-release.yml
+++ b/.github/workflows/periodic-release.yml
@@ -2,7 +2,8 @@ name: Periodic Release
 
 on:
   schedule:
-    - cron: '0 0 * * 0' # Runs weekly
+    # If the schedule stops working, see the docs: https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#schedule
+    - cron: '0 0 * * 0' # Runs weekly at 00:00 on Sunday
   workflow_dispatch: # Allows manual triggering
 
 env:
@@ -36,15 +37,18 @@ jobs:
             new_tag="v${major}.${minor}.${new_patch}"
             echo "New tag: $new_tag"
             echo "TAG=$new_tag" >> $GITHUB_ENV
+          else
+            echo "Could not determine the latest tag version."
+            exit 1
           fi
 
       - name: 'Create Release'
         id: create_release
         uses: ncipollo/release-action@v1
         with:
-          body: "This is an automatic release contianing upgrades to system packages in the Rocker Linux base Docker image."
-          makeLatest: false
-          prerelease: true
+          body: "A Weekly release contianing upgrades to system packages in the base Rocker Linux container."
+          makeLatest: true
+          prerelease: false
           tag: ${{ env.TAG }}
 
       - name: Harden Runner
@@ -63,5 +67,5 @@ jobs:
         uses: docker/build-push-action@4f58ea79222b3b9dc2c8bbdd6debcef730109a75 # v6.9.0
         with:
           build-args: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          push: false
+          push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.TAG }},${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
