Pass github token via build step env ar.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,3 +54,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+        env:  
+          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
